# inplot

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
core/: CMakeLists.txt
core/executables/: main.cpp
core/src/bindings/: bindings.cpp
core/src/figure/: figure.cpp  figure.hpp  types.hpp
core/src/window/: window.cpp  window.hpp
core/tests/: test_bindings.ipynb  test_bindings.py
